--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-EXPO_PUBLIC_API_URL=https://flickapi.proxia.kr/place
+EXPO_PUBLIC_API_URL=http://10.80.161.236:8082
+# EXPO_PUBLIC_API_URL=http://10.80.161.236:8082
+# EXPO_PUBLIC_API_URL=https://flickplaceapi.proxia.kr
