--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prebuild": "expo prebuild"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -20,7 +21,7 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
-    "expo": "~53.0.6",
+    "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.5",
@@ -30,6 +31,7 @@
     "expo-image": "~2.1.6",
     "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.4",
+    "expo-modules-core": "~2.3.13",
     "expo-router": "~5.0.5",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
@@ -49,7 +51,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
-    "react-native-web": "~0.20.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.24.4",
     "zustand": "^5.0.4"
